--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ https://templatemo.com/tm-540-lava-landing-page
                 <div class="col-lg-8 offset-lg-2">
                     <div class="center-heading">
                         <h2>The Process</h2>
-                        <p>We like to keep things simple. This step by step process outlines your journey to creating your website from begining to end.</p>
+                        <p>We like to keep things simple. This step by step process outlines your journey to creating your website from beginning to end.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
@@ -133,7 +133,7 @@ https://templatemo.com/tm-540-lava-landing-page
                             <h2>03</h2>
                             <!-- <img src="assets/images/features-icon-2.png" alt=""> -->
                             <h4>Development</h4>
-                            <p>We then begin building your site, with checkins occurring weekly.</p>
+                            <p>We then begin building your site, with check-ins occurring weekly.</p>
                         </div>
                     </div>
                 </div>
@@ -143,7 +143,7 @@ https://templatemo.com/tm-540-lava-landing-page
                             <h2>04</h2>
                             <!-- <img src="assets/images/features-icon-3.png" alt=""> -->
                             <h4>Delivery</h4>
-                            <p>Lastly, we transfer the site and all associted files into your possesion.</p>
+                            <p>Lastly, we transfer the site and all associated files into your possession.</p>
                         </div>
                     </div>
                 </div>
@@ -172,7 +172,7 @@ https://templatemo.com/tm-540-lava-landing-page
                             <img src="./assets/images/about-icon.png" alt="check">
                             <div class="text">
                                 <h4>Weekly Updates</h4>
-                                <p>Consistent communication is important to us. You'll never be in the dark about where your webstite stands.</p>
+                                <p>Consistent communication is important to us. You'll never be in the dark about where your website stands.</p>
                             </div>
                         </li>
                         <li data-scroll-reveal="enter right move 30px over 0.6s after 0.5s">
@@ -186,7 +186,7 @@ https://templatemo.com/tm-540-lava-landing-page
                             <img src="./assets/images/about-icon.png" alt="check">
                             <div class="text">
                                 <h4>High Quality Deliverables</h4>
-                                <p>Our standards are high. By the end of the process you can always expect a high quality website.</p>
+                                <p>Our standards are high. By the end of the process you can and should expect a high quality website.</p>
                             </div>
                         </li>
                     </ul>
@@ -231,7 +231,7 @@ https://templatemo.com/tm-540-lava-landing-page
                     <img src="assets/images/pricing.svg" class="rounded img-fluid d-block mx-auto" alt="App">
                 </div>
                 <div class="right-text  col-lg-6 col-md-12 col-sm-12 mobile-bottom-fix">
-                    <p class="team-text">All rates are formated to fit your business budget. You'll never pay for anything you dont need. Consultations are <span class="no-break">100% free</span>. Get in touch to find a solution that will fit your budget.</p>
+                    <p class="team-text">All rates are formatted to fit your business budget. You'll never pay for anything you do not need. Consultations are <span class="no-break">100% free</span>. Get in touch to find a solution that will fit your budget.</p>
                     <a href="#contact-us" class="main-button-slider dark-text">FIND OUT MORE</a>
                 </div>
             </div>
@@ -328,7 +328,7 @@ https://templatemo.com/tm-540-lava-landing-page
                     <div class="right-content col-lg-6 col-md-12 col-sm-12">
                         <h2>Let's Get In Touch</h2>
                         <p>Your future website awaits!
-                            <br><br>We are excited to help you fulfil all your online web service needs. If you have any questions, concerns, or would like a quote, send us a message, and we'll be in touch with you as soon as possible.</p>
+                            <br><br>We are excited to help you fulfill all of your online web service needs. If you have any questions, concerns, or would like a quote, send us a message, and we'll be in touch with you as soon as possible.</p>
                         <ul class="social">
                             <!-- <li><a href="https://fb.com/templatemo"><i class="fa fa-facebook"></i></a></li> -->
                             <li><a href="https://twitter.com/kindvegetable24"><i class="fa fa-twitter"></i></a></li>
