--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ https://templatemo.com/tm-540-lava-landing-page
                     <!-- ***** Contact Form Start ***** -->
                     <div class="col-lg-6 col-md-12 col-sm-12">
                         <div class="contact-form">
-                            <form id="contact" action ="https://formsubmit.co/kevinarnoldtv@gmail.com" method="post"><input type="hidden" name="form-name" value="contact">
+                            <form id="contact" action ="https://formsubmit.co/kevinarnoldcode@gmail.com" method="post"><input type="hidden" name="form-name" value="contact">
                                 <div class="row">
                                     <div class="col-md-6 col-sm-12">
                                         <fieldset>
@@ -342,7 +342,7 @@ https://templatemo.com/tm-540-lava-landing-page
             <div class="row">
                 <div class="col-lg-12">
                     <div class="sub-footer">
-                        <p>Copyright © 2020 KVCode | Design: <a rel="nofollow" href="https://templatemo.com/">TemplateMo</a></p>
+                        <p>Copyright © 2022 KVCode | Design: <a rel="nofollow" href="https://templatemo.com/">TemplateMo</a></p>
                     </div>
                 </div>
             </div>
